# Triage-Buddy

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.claude/skills/requirements-engineering/: .skillfish.json
docs/: requirements.md
evals/: _match.py  cases.json  conftest.py  test_cases.py
src/triage_buddy/: __init__.py  composition.py  config.py  prompts.py
src/triage_buddy/adapters/: __init__.py
src/triage_buddy/adapters/cli/: __init__.py  app.py
src/triage_buddy/adapters/llm/: __init__.py  _http.py  _retry.py  gemini.py  groq.py  labproxy.py  mock.py  ollama.py  openrouter.py  zai.py
src/triage_buddy/adapters/web/: __init__.py  app.py  service.py
src/triage_buddy/adapters/web/templates/: page.html
src/triage_buddy/domain/: __init__.py  models.py  safety.py  triage.py
src/triage_buddy/ports/: __init__.py  llm.py
tests/: test_cli.py  test_composition.py  test_config.py  test_domain.py  test_gemini_adapter.py  test_groq_adapter.py  test_health_cache.py  test_labproxy_adapter.py  test_ollama_adapter.py  test_openrouter_adapter.py  test_prompts.py  test_retry.py  test_safety.py  test_triage.py  test_web_http.py  test_web_render.py  test_web_service.py  test_zai_adapter.py
