[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "triage-buddy"
version = "0.1.0"
description = "Escalation advice for medical symptoms, behind a hexagonal core."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Real LLM providers are optional extras; the core + mock slice needs none of them.
anthropic = ["anthropic>=0.40"]
groq = ["groq>=0.11"]
gemini = ["google-genai>=1.0"]
# The web adapter rides on FastAPI + Jinja2 templates; the CLI and core slice need none of it.
web = ["fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.1"]
# httpx2 is what Starlette's TestClient prefers; without it the suite warns and falls back to httpx.
dev = ["pytest>=7", "fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.1", "httpx2>=2.5"]

[project.scripts]
triage-buddy = "triage_buddy.adapters.cli.app:main"
triage-buddy-web = "triage_buddy.adapters.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the web adapter's Jinja2 templates inside the wheel.
"triage_buddy.adapters.web" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
